--- a/docs/issues/HAU-001.md
+++ b/docs/issues/HAU-001.md
@@ -1,13 +1,13 @@
 # HAU-001: clipping
 
-![Clipping](HAU001.svg)
+![Clipping](HAU-001.svg)
 
 
 ## What it does
 
 Audible distortions.
 
-Harshness on peak volume.
+Harshness at peak volume.
 
 ## What it is
 
@@ -23,9 +23,9 @@ Generally this is poor audio engineering at the source:
    The signal exceeds the digital ceiling and gets hard-clipped.
 2. Poor AD conversion: during the original analog-to-digital capture, the input gain was set too high.
    The ADC saturates and clips the peaks.
-4. Gain staging errors in production: plugins, effects, or summing in the DAW pushed individual tracks or the mix
+3. Gain staging errors in production: plugins, effects, or summing in the DAW pushed individual tracks or the mix
    bus past 0 dBFS without a limiter catching it.
-5. Format conversion without headroom: converting between bit depths or sample rates without proper dithering/limiting.
+4Format conversion without headroom: converting between bit depths or sample rates without proper dithering/limiting.
    For example, 32-bit float (which allows values above 0 dBFS) truncated to 16-bit integer without normalization.
 
 > Rarely: the person who did the rip
