--- a/docs/issues/HAU-013.md
+++ b/docs/issues/HAU-013.md
@@ -4,7 +4,7 @@
 
 ## What it does
 
-Constant "hum sound" in the background (50 Hz Europe/Asia, 60 Hz Americas/Japan).
+Constant hum in the background (50 Hz Europe/Asia, 60 Hz Americas/Japan).
 
 ## What it is
 
