--- a/docs/issues/HAU-014.md
+++ b/docs/issues/HAU-014.md
@@ -32,11 +32,11 @@ High-frequency energy that is close to the midrange reference suggests elevated 
 Plenty, unfortunately.
 Noise floor detection is genuinely hard to do.
 
-Wall-to-wall records literally have no silent section to measure it.
+Recordings with no silent passages literally have no segment we can measure noise floor properly.
 Experimental records, or darker music, will have purposely sonic properties
 that will be construed as noise.
 
-A high noise floor indication should be taken with salt, and confirmed with
+A high noise floor indication should be taken with a grain of salt, and confirmed with
 actual listening of the culprit to determine if it is legit or not.
 
 ## Severity
