--- a/docs/issues/HAU-017.md
+++ b/docs/issues/HAU-017.md
@@ -20,7 +20,7 @@ Sloppy engineering.
 > The person who ripped it
 
 If done carelessly, pre-gap can be added on CD ripping / CD burning.
-Back track split with vinyl may also do that.
+Bad track split with vinyl may also do that.
 
 ## Recoverability
 
