--- a/docs/issues/HAU-009.md
+++ b/docs/issues/HAU-009.md
@@ -45,3 +45,7 @@ Severity is based on the number of ISP events:
 - Mild: 1
 - Moderate: 100
 - Severe: 1000
+
+## More reading
+
+* https://benchmarkmedia.com/blogs/application_notes/intersample-overs-in-cd-recordings
