--- a/docs/issues/HAU-004.md
+++ b/docs/issues/HAU-004.md
@@ -29,7 +29,7 @@ Whoever was between you and the CD may have decided to re-encode a lossy file as
 > ... however...
 
 Aggressive mastering, where the engineer applied a steep low-pass filter near 20 kHz, producing a brick wall that
-is indistinguishable from a lossy codec cutoff. This is rare but not impossible.
+is indistinguishable from a lossy codec cutoff. This was common mastering practice in the 2000s.
 
 ## Recoverability
 
@@ -43,6 +43,13 @@ consistent with a known lossy codec and bitrate. Known cutoff frequencies are ch
 19 kHz (MP3/AAC 256), 20 kHz (MP3 320), and 20.5 kHz (Opus 128).
 A dropoff exceeding 15 dB with sharpness above 30 dB/octave is flagged, and the
 most likely codec/bitrate match is reported.
+
+To ensure we don't flag legit mastering cutoff too often, we also inspect:
+- the rolloff sharpness
+- check for ultrasonic content (even faint)
+
+Ideally, we would also look for other markers of lossy compression (pre-echo detection,
+spectral hole detection).
 
 ## False positives
 
