Refine ISP severity methodology
Signed-off-by: apostasie <spam_blackhole@farcloser.world>

--- a/docs/issues/HAU-009.md
+++ b/docs/issues/HAU-009.md
@@ -8,7 +8,7 @@ Causes clipping (see HAU-001), but invisible to naive peak meters.
 
 This is a concern for two reasons:
 - any DAC that does not do attenuation before reconstruction will clip
-- lossy encoding with ISPs will generate audible distortions
+- lossy encoding with ISPs in the source will generate audible distortions
 
 ## What it is
 
