Better output, lint fixes
Signed-off-by: apostasie <spam_blackhole@farcloser.world>

--- a/docs/issues/HAU-009.md
+++ b/docs/issues/HAU-009.md
@@ -33,7 +33,29 @@ You can buy a better DAC though.
 True peak analysis per ITU-R BS.1770: 4x polyphase oversampling using a windowed sinc
 filter with Kaiser window (beta=5). Each input sample is interpolated to 4 intermediate
 points. Any interpolated sample exceeding 0 dBFS (absolute value > 1.0) is counted as
-an ISP event, and the maximum overshoot in dB is tracked.
+an ISP event.
+
+We track:
+- **Total ISP count** and **maximum overshoot** (dBTP)
+- **Density metrics**: ISPs per 1-second window to identify "hot spots"
+  - Peak density: worst-case ISPs/sec in any single second
+  - Average density: ISPs/sec across the entire file
+  - Worst timestamp: location of peak density window
+- **Magnitude distribution**: counts by overshoot threshold
+  - ISPs >0.5 dB: mild (may clip sensitive DACs)
+  - ISPs >1.0 dB: moderate (will clip most DACs)
+  - ISPs >2.0 dB: severe (significant distortion)
+
+## Technical notes
+
+The worst-case ISP frequency is **Fs/4** (11.025 kHz at 44.1 kHz). At this frequency,
+samples can fall exactly at zero crossings, completely missing peaks. Maximum theoretical
+overshoot is +3.01 dB (√2 factor).
+
+Density matters more than raw count:
+- Isolated ISPs are masked by transients
+- Dense sustained ISPs create audible "crunch" or harshness
+- ISPs during quiet passages are more audible (no masking)
 
 ## False positives
 
@@ -41,11 +63,11 @@ No.
 
 ## Severity
 
-Severity is based on the number of ISP events:
-- Mild: 1
-- Moderate: 100
-- Severe: 1000
+Severity considers both count and density:
+- **Mild**: Few ISPs, low density, small overshoot (<0.5 dB)
+- **Moderate**: Many ISPs but sparse, or fewer with >1 dB overshoot
+- **Severe**: High density (>100/sec) or significant >1 dB overshoots
 
 ## More reading
 
-* https://benchmarkmedia.com/blogs/application_notes/intersample-overs-in-cd-recordings
+* From the horse mouth: https://benchmarkmedia.com/blogs/application_notes/intersample-overs-in-cd-recordings
